--- a/index.html
+++ b/index.html
@@ -396,27 +396,27 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/portfolio/1.jpg    1x,
-                        ./images/portfolio/1.jpg 2x
+                      ./images/portfolio/our-portfolio-1.jpeg    1x,
+                      ./images/portfolio/our-portfolio-1-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/1.jpg    1x,
-                      ./images/portfolio/1.jpg 2x
+                      ./images/portfolio/our-portfolio-1-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-1-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/1.jpg    1x,
-                      ./images/portfolio/1.jpg 2x
+                      ./images/portfolio/our-portfolio-1-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-1-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/1.jpg"
+                    src="./images/portfolio/our-portfolio-1.jpeg"
                     alt="Bank application"
                     width="360"
                     height="300"
@@ -439,27 +439,27 @@
                 <picture>
                   <source
                     srcset="
-                    ./images/portfolio/2.jpg    1x,
-                      ./images/portfolio/2.jpg 2x
+                      ./images/portfolio/our-portfolio-2.jpeg    1x,
+                      ./images/portfolio/our-portfolio-2-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/2.jpg    1x,
-                      ./images/portfolio/2.jpg 2x
+                      ./images/portfolio/our-portfolio-2-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-2-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/2.jpg    1x,
-                      ./images/portfolio/2.jpg 2x
+                      ./images/portfolio/our-portfolio-2-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-2-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/2.jpg"
+                    src="./images/portfolio/our-portfolio-2.jpeg"
                     alt="Payment by phone"
                     width="360"
                     height="300"
@@ -482,27 +482,27 @@
                 <picture>
                   <source
                     srcset="
-                    ./images/portfolio/3.jpg    1x,
-                      ./images/portfolio/3.jpg 2x
+                      ./images/portfolio/our-portfolio-3.jpeg    1x,
+                      ./images/portfolio/our-portfolio-3-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/3.jpg    1x,
-                      ./images/portfolio/3.jpg 2x
+                      ./images/portfolio/our-portfolio-3-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-3-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/3.jpg    1x,
-                      ./images/portfolio/3.jpg 2x
+                      ./images/portfolio/our-portfolio-3-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-3-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/3.jpg"
+                    src="./images/portfolio/our-portfolio-3.jpeg"
                     alt="Phone and laptop"
                     width="360"
                     height="300"
@@ -525,27 +525,27 @@
                 <picture>
                   <source
                     srcset="
-                    ./images/portfolio/4.jpg    1x,
-                      ./images/portfolio/4.jpg 2x
+                      ./images/portfolio/our-portfolio-4.jpeg    1x,
+                      ./images/portfolio/our-portfolio-4-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/4.jpg    1x,
-                      ./images/portfolio/4.jpg 2x
+                      ./images/portfolio/our-portfolio-4-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-4-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/4.jpg    1x,
-                      ./images/portfolio/4.jpg 2x
+                      ./images/portfolio/our-portfolio-4-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-4-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/4.jpg"
+                    src="./images/portfolio/our-portfolio-4.jpeg"
                     alt="Driving a car"
                     width="360"
                     height="300"
@@ -568,27 +568,27 @@
                 <picture>
                   <source
                     srcset="
-                    ./images/portfolio/5.jpg    1x,
-                      ./images/portfolio/5.jpg 2x
+                      ./images/portfolio/our-portfolio-5.jpeg    1x,
+                      ./images/portfolio/our-portfolio-5-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/5.jpg    1x,
-                      ./images/portfolio/5.jpg 2x
+                      ./images/portfolio/our-portfolio-5-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-5-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/5.jpg    1x,
-                      ./images/portfolio/5.jpg 2x
+                      ./images/portfolio/our-portfolio-5-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-5-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/5.jpg"
+                    src="./images/portfolio/our-portfolio-5.jpeg"
                     alt="Phone screens"
                     width="360"
                     height="300"
@@ -611,27 +611,27 @@
                 <picture>
                   <source
                     srcset="
-                    ./images/portfolio/6.jpg   1x,
-                      ./images/portfolio/6.jpg 2x
+                      ./images/portfolio/our-portfolio-6.jpeg    1x,
+                      ./images/portfolio/our-portfolio-6-2x.jpeg 2x
                     "
                     media="(min-width: 1158px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/6.jpg    1x,
-                      ./images/portfolio/6.jpg 2x
+                      ./images/portfolio/our-portfolio-6-tab.jpeg    1x,
+                      ./images/portfolio/our-portfolio-6-tab-2x.jpeg 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                    ./images/portfolio/6.jpg   1x,
-                      ./images/portfolio/6.jpg 2x
+                      ./images/portfolio/our-portfolio-6-mob.jpeg    1x,
+                      ./images/portfolio/our-portfolio-6-mob-2x.jpeg 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="./images/portfolio/6.jpg"
+                    src="./images/portfolio/our-portfolio-6.jpeg"
                     alt="A girl with a phone"
                     width="360"
                     height="300"
@@ -812,7 +812,7 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              <p class="modal-policy-tex">
+              <p class="modal-policy-text">
                 I accept the terms and conditions of the
                 <a class="modal-policy-link">Privacy Policy</a>
               </p>
